--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-spring.application.name=orderms
+spring.application.name=cart
 
 #H2-Inmemory DB-condole --> http://localhost:8081/h2-console
 spring.h2.console.enabled=true
